--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_app_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -18,6 +18,11 @@
         </activity>
         <activity android:name=".data.DBviewer" />
         <activity android:name=".ListActivity" />
+
+        <provider
+            android:authorities="etchee.com.weightlifty"
+            android:name=".data.DataProvider"
+            android:exported="false" />
     </application>
 
 </manifest>
