Basis for loading a specific event using CursorLoader
- Created an activity to show info about specific event
- Created basic components for the users to modify specific event
- CursorLoader implementation to load thru the SQL data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".data.DBviewer" />
         <activity android:name=".ListActivity" />
+        <activity android:name=".EditEventActivity"/>
 
         <provider
             android:authorities="etchee.com.weightlifty"
