Press "leg" fab to navigate to ChooseEventActivity to start creating a new event (Dummy at this point)
- EditEventActivity should be modified to take this dummy event, then
put on necessary info to actually insert an event

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".data.DBviewer" />
         <activity android:name=".ListActivity" />
         <activity android:name=".EditEventActivity"/>
+        <activity android:name=".ChooseEventActivity"/>
 
         <provider
             android:authorities="etchee.com.weightlifty"
