--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.github.clans:fab:1.6.4'
+    compile 'com.github.clans:fab:1.6.4'    // For FAB button
+    compile 'com.miguelcatalan:materialsearchview:1.4.0' //For searchView
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.1'
 }
