ContentProvider query method now takes null for the projection as recommended in Android Developers

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
 
         </activity>
 
-        <activity android:name=".Search.SearchViewActivity">
+        <activity android:name=".Search.SearchViewActivity"
+                    android:launchMode="singleTop">
 
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
