--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity android:name=".Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -20,14 +19,16 @@
 
         <activity android:name=".Activity.ListActivity">
 
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"
-                />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
 
         </activity>
 
-        <activity android:name=".Search.SearchViewActivity"
-                    android:launchMode="singleTop">
+        <!--Searchable Activity, triggered by the SearchView widget in the ListView-->
+        <activity
+            android:name=".Search.SearchViewActivity"
+            android:launchMode="singleTop">
 
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
