--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,19 +39,14 @@
 
             <meta-data
                 android:name="android.app.default_searchable"
-                android:value="etchee.com.weightlifty.Search.SearchResultsActivity"
                 android:resource="@xml/searchable" />
         </activity>
 
-        <provider
-            android:name=".Search.SuggestionProvider"
-            android:authorities="suggestionProviderAuthority"
-            android:syncable="false" />
 
-        <!--ListActivity has the search bar-->
+
         <activity android:name=".Activity.ListActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            >
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value=".Search.SearchResultsActivity" />
@@ -59,7 +54,13 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
         </activity>
+
+        <provider
+            android:name=".Search.SuggestionProvider"
+            android:authorities="suggestionProviderAuthority"
+            android:syncable="false" />
 
         <activity android:name=".Activity.EditEventActivity" />
         <activity android:name=".Activity.ChooseEventActivity" />
