--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,14 +43,13 @@
         </activity>
 
 
-
-        <activity android:name=".Activity.ListActivity"
+        <activity
+            android:name=".Activity.WorkoutListActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value=".Search.SearchResultsActivity" />
-
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
