--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.6.0'
     compile 'com.github.clans:fab:1.6.4'    // For FAB button
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.1'
